@@ -1,5 +1,10 @@
 07/28/2005 Bob Rossi <bob@brasko.net>
 
+	* Makefile.am (EXTRA_DIST): Undo last commit.
+	* Makefile.in: Autogenerated.
+
+07/28/2005 Bob Rossi <bob@brasko.net>
+
 	* Makefile.am (EXTRA_DIST): Fix READLINE_DIR directory.
 	* Makefile.in: Autogenerated.
 
